frontend/src/index.css
html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 170px;
    
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 165px;
}


.btn {
  z-index: 9999 !important; 
  color: rgb(0, 0, 0) !important; 
}

.btn:active {
  transform: scale(0.9);
}


.product_list_buttons {
  display: flex;
  margin-top: 15px;
  align-items: center;
  gap: 10px;
}

.ski_image {  
  position: absolute;
  max-width: 90%;
  margin-left: 0%;
  margin-bottom: 0% !important; /* Adding !important to ensure it takes precedence */
  bottom: 0;
  z-index: -1;  
}

.ice_cave_image {  
  position: absolute;
  max-width: 90%;
  margin-left: 0%;
  margin-right: 0%;
  margin-bottom: 0% !important; /* Adding !important to ensure it takes precedence */
  bottom: 0;
  right: 0;
  z-index: -1;
}

.cliff_image {  
  position: fixed;
  max-width: 90%;
  height: 100%;
  margin-left: 0%;  
  margin-bottom: 0% !important; /* Adding !important to ensure it takes precedence */
  bottom: 0;
  z-index: -1;  
}

.rappel_image {  
  position: absolute;
  height: 95%;
  margin-right: 0%;  
  margin-bottom: 0% !important; /* Adding !important to ensure it takes precedence */
  bottom: 0;
  right:0;
  z-index: -1;  
}

.rock_inverted_photo {  
  height: 40%;
  position: absolute;
  z-index: -1;  
}

.subtotal_and_checkout_div_in_cart{
  z-index: 9999;
  padding-bottom: 300px;
}

.ski_banner_box {
  position: relative;
  width: 1280px;
  height: 250px;
  background-image: linear-gradient(120deg, #a1c4fd 0%, #91b2c2 100%);
  margin-top: 50px;
  margin-bottom: 50px;
  overflow: hidden;
  z-index: 1;
  border-radius: 50px;
}

.ski_slope {
  position: absolute;
  bottom: 0;
  left: -110px;
  width: 80%;
  height: 2613px;
  background-image: linear-gradient(120deg, #f7f7f7 0%, #f4f7f8 100%);
  transform-origin: bottom left;
  transform: perspective(500px) rotateX(55deg);
  overflow: hidden;
  z-index: 2;
}

.skier_banner_vector{
  position: relative;
  z-index: 223;
  height: 60px;
  top: 50px;
  animation-name: ski;
  z-index: -12;
  animation-duration: 6s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
}

@keyframes ski{
  from{transform: translateX(-350px)}
  to{transform: translateX(800px) translateY(250px) }  
}



@keyframes cloud{
  from{transform: translateX(0px)}
  to{transform: translateX(600px)}  
}

.skier_banner_slope{
  position: absolute;
  object-fit:none;
  scale: 100%;
  z-index: -22;
  object-position: bottom 180px right 0px;
}

.cloud_banner_vector {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: 50px;
  animation-name: cloud;
  animation-duration: 7s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector2 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: 220px;
  animation-name: cloud;
  animation-duration: 4s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector3 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: 390px;
  animation-name: cloud;
  animation-duration: 8s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);   
  animation-direction: alternate;
}

.cloud_banner_vector4 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: 510px;
  animation-name: cloud;
  animation-duration: 5s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector5 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: -320px;
  animation-name: cloud;
  animation-duration: 5s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector6 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: -140px;
  animation-name: cloud;
  animation-duration: 13s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector7 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: 620px;
  animation-name: cloud;
  animation-duration: 6s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector8 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: -320px;
  animation-name: cloud;
  animation-duration: 8s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector9 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: -520px;
  animation-name: cloud;
  animation-duration: 3s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector10 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: 30px;
  animation-name: cloud;
  animation-duration: 5s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector11 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: 140px;
  animation-name: cloud;
  animation-duration: 3s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector12 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: -440px;
  animation-name: cloud;
  animation-duration: 2s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.cloud_banner_vector13 {
  position: absolute;
  object-fit:none;
  scale: 20%;
  z-index: 1334;
  top: -250px;
  right: -240px;
  animation-name: cloud;
  animation-duration: 2s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-direction: alternate;
}

.tree{
  position: absolute;
  height: 100px;
  top: 160px;
  right: 950px;
  z-index: -1;
}

.banner_box_container{
  width: 100%;
  display: flex;
  justify-content: center;
}

.ski_chair{
  position: absolute;
  height: 170px;
  top: 230px;
  left: 940px;
  animation-name: chair_lift;
  animation-duration: 10s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  z-index: -2;
}

.ski_chair2{
  position: absolute;
  height: 170px;
  top: 230px;
  left: 940px;
  animation-name: chair_lift;
  animation-duration: 10s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-delay: 2s;
  z-index: -2;
}

.ski_chair3{
  position: absolute;
  height: 170px;
  top: 230px;
  left: 940px;
  animation-name: chair_lift;
  animation-duration: 10s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-delay: 4s;
  z-index: -2;
}

.ski_chair4{
  position: absolute;
  height: 170px;
  top: 230px;
  left: 940px;
  animation-name: chair_lift;
  animation-duration: 10s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-delay: 6s;
  z-index: -2;
}

.ski_chair5{
  position: absolute;
  height: 170px;
  top: 230px;
  left: 940px;
  animation-name: chair_lift;
  animation-duration: 10s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.5,.77,1,1);  
  animation-delay: 8s;
  z-index: -2;
}




@keyframes chair_lift{
  from{transform: translateX(0px)}
  to{transform: translateX(-1400px) translateY(-350px)}  
}

.climate_pledge_div{
  margin-left: 50px;
  margin-right: 50px;
  margin-top: 100px;
  margin-bottom: 100px;
  display: flex;
  justify-content: center; 
  align-items: center;
  flex-direction: row;  
}

.plant_tree{
  border-radius: 50px;
  width: 450px;
  margin-right: 100px;  
  box-shadow: 0 5px 20px rgba(0, 0, 0, .7);
}

.climate_text_div{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  
}

.climate_text_paragraph{
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 10px;
}


.nasa_snow_cover{
  margin-left: 150px;
  display: flex;
  justify-content: center; 
  align-items: center;
  flex-direction: row;  
  margin-bottom: 150px;
  gap: 100px;
}

.nasa_sat_image{
  border-radius: 50px;
  width: 500px;
  margin-top: 50px;  
  margin-bottom: 50px;
  box-shadow: 0 5px 20px rgba(0, 0, 0, .7);
}



.nasa_logo{
  width: 150px;
}

.sat_images{

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.date_and_text_nasa{
  width: 500px;
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;

}

    
.sat_text{
  width: 500px;
  margin-top: 20px;
  align-self: center;
}

.snow_section_title{
  margin-top: 50px;
}


h1.counter {
  align-self: center;
  display: flex;
  flex-direction: column;
  font-weight: bold;
  font-size: 26px;
  align-self: center;  
  padding-right: 120px;
}

h1.counter > span {  
  font-weight: bold;
  font-size: 26px;
  overflow: hidden;
  display: inline-block;
  align-self: center;
  margin: 0px;
  padding: 0px;  
}

/* .land_sat{
  width: 150px;  
} */

.land_sat { 
  width: 150px;  
  animation-name: floating;
  animation-duration: 5s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;  
  margin-top: 50px;
}

@keyframes floating {
  0% { transform: translate(0,  0px); }
  50%  { transform: translate(0, 15px); }
  100%   { transform: translate(0, -0px); }   
}

.carousel_caption_text {
  color: white;
  background-color: rgba(52, 52, 52, 0.8);
  max-height: 5em; /* Adjust the height as needed */
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 5; /* Maximum number of lines to display */
  overflow: hidden;
  text-overflow: ellipsis;
}

